--- a/js-demo2b.html
+++ b/js-demo2b.html
@@ -33,6 +33,7 @@
   <h1>My Second Heading</h1>
   <p>My Second paragraph.</p>
 
+  <!-- Muuukay -->
   <table>
     <!--<caption></caption>
     <thead>
