--- a/js-demo2b.html
+++ b/js-demo2b.html
@@ -11,6 +11,68 @@
     $(document).ready(function() {
        $("#btn").click(function(event){
 
+        //1.Create Table Structure
+        //1a.Add caption
+        $('table').append('<caption></caption>');
+        //1b.Add thead and its cells
+        $('table').append('<thead></thead>');
+        $('thead').append('<tr id="showheading"></tr>');
+        $('#showheading').append('<th></th>');
+        $('#showheading').append('<th></th>');
+        $('#showheading').append('<th></th>');
+        $('#showheading').append('<th></th>');
+        $('#showheading').append('<th></th>');
+        //1c.Add tbody and its cells
+        $('table').append('<tbody></tbody>');
+        $('tbody').append('<tr id="showcalories"></tr>');
+        $('#showcalories').append('<td></td>');
+        $('#showcalories').append('<td></td>');
+        $('#showcalories').append('<td></td>');
+        $('#showcalories').append('<td></td>');
+        $('#showcalories').append('<td></td>');
+        //1d.tbody part.2
+        $('tbody').append('<tr id="showfat"></tr>');
+        $('#showfat').append('<td></td>');
+        $('#showfat').append('<td></td>');
+        $('#showfat').append('<td></td>');
+        $('#showfat').append('<td></td>');
+        $('#showfat').append('<td></td>');
+        //1e.Add tfoot and its cells
+        $('table').append('<tfoot></tfoot>');
+        $('tfoot').append('<tr id="showven"></tr>');
+        $('#showven').append('<td></td>');
+        $('#showven').append('<td></td>');
+        $('#showven').append('<td></td>');
+        $('#showven').append('<td></td>');
+        $('#showven').append('<td></td>');
+
+        //2.Load Data from json File to the Table
+        $.getJSON("/m2-w1-d2-homework/data.json", function(jqdata) {
+            $('caption').append(jqdata.title);
+            $('th:first-child').append(jqdata.heading);
+            $('th:nth-child(2)').append(jqdata.head1);
+            $('th:nth-child(3)').append(jqdata.head2);
+            $('th:nth-child(4)').append(jqdata.head3);
+            $('th:last-child').append(jqdata.head4);
+            //tbody: calories
+            $('#showcalories td:first-child').append(jqdata.subheadcal);
+            $('#showcalories td:nth-child(2)').append(jqdata.cal1);
+            $('#showcalories td:nth-child(3)').append(jqdata.cal2);
+            $('#showcalories td:nth-child(4)').append(jqdata.cal3);
+            $('#showcalories td:last-child').append(jqdata.cal4);
+            //tbody: fat
+            $('#showfat td:first-child').append(jqdata.subheadfat);
+            $('#showfat td:nth-child(2)').append(jqdata.fat1);
+            $('#showfat td:nth-child(3)').append(jqdata.fat2);
+            $('#showfat td:nth-child(4)').append(jqdata.fat3);
+            $('#showfat td:last-child').append(jqdata.fat4);
+            //tfoot: vendor
+            $('#showven td:first-child').append(jqdata.subheadven);
+            $('#showven td:nth-child(2)').append(jqdata.ven1);
+            $('#showven td:nth-child(3)').append(jqdata.ven2);
+            $('#showven td:nth-child(4)').append(jqdata.ven3);
+            $('#showven td:last-child').append(jqdata.ven4);
+        })
        });
     });
  </script>
